<resources>
    <string name="app_name">BroReminder</string>
    <string name="overlay_permission">Bitte Overlay-Berechtigung erlauben</string>
    <string name="export_success">Exportiert: %s</string>
    <string name="export_failed">Export fehlgeschlagen</string>
    <string name="file_not_found">Keine Datei gefunden</string>
    <string name="import_success">Import erfolgreich</string>
    <string name="import_failed">Import fehlgeschlagen</string>
    <string name="edit">Ändern</string>
    <string name="delete">Löschen</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete_time">Zeit löschen?</string>
    <string name="report_heading">Report vom %s</string>
    <string name="back">Zurück</string>
    <string name="back_caps">ZURÜCK</string>
    <string name="save">SICHERN</string>
    <string name="hide_keyboard">▼</string>
    <string name="times_title">Alarmzeiten :</string>
    <string name="plus">+</string>
    <string name="day_mon">Mo.</string>
    <string name="day_tue">Di.</string>
    <string name="day_wed">Mi.</string>
    <string name="send_test_email">Test Email senden</string>
    <string name="day_thu">Do.</string>
    <string name="day_fri">Fr.</string>
    <string name="day_sat">Sa.</string>
    <string name="day_sun">So.</string>
    <string name="prompt_yes_no">Ja/Nein Frage?</string>
    <string name="repeat_if_no">Bei NEIN wiederholen?</string>
    <string name="auto_answer_unanswered">Unbeantwortet automatisch eintragen?</string>
    <string name="priority_reminder">Priorität</string>
    <string name="title_hint">...Titel...</string>
      <string name="text_hint">Text...</string>
      <string name="tts_hint">Sprachtext...</string>
      <string name="record">Aufnehmen</string>
      <string name="record_again">Aufnehmen</string>
      <string name="stop_record">Stopp</string>
      <string name="delete_recording">Löschen</string>
      <string name="recording_info">Aufnahme: %ds</string>
      <string name="recording_indicator">Aufnahme läuft...</string>
    <string name="countdown_go">Los</string>
    <string name="photo">Foto</string>
      <string name="photo_added">Foto hinzugefügt</string>
      <string name="camera_permission_denied">Kameraberechtigung verweigert</string>
    <string name="play_alarm_sound">Alarmsound</string>
    <string name="record_permission_denied">Mikrofonberechtigung verweigert</string>
    <string name="record_failed">Aufnahme fehlgeschlagen</string>
    <string name="reports">Berichte</string>
    <string name="export">Export</string>
    <string name="settings">Einstellungen</string>
    <string name="email_hint">Report Empfänger Email</string>
    <string name="add_time_desc">Zeit hinzufügen</string>
    <string name="max_times_reached">Maximal 10 Zeiten erlaubt</string>
    <string name="import_label">Import</string>
    <string name="exit">Schließen</string>
    <string name="dialog_prompt">Hast du etwas getrunken?</string>
    <string name="yes">JA</string>
    <string name="no">NEIN</string>
    <string name="load">IMPORTIEREN</string>
    <string name="send">per E-Mail senden</string>
    <string name="reminders">Reminder</string>
    <string name="toast_saved">Gespeichert</string>
    <string name="toast_loaded">Geladen</string>
    <string name="toast_email_sent">E-Mail gesendet</string>
    <string name="toast_email_failed">Senden der E-Mail fehlgeschlagen</string>
    <string name="enter_password">Passwort eingeben</string>
    <string name="wrong_password">Falsches Passwort</string>
    <string name="schedule_reports">PLANEN</string>
    <string name="send_report_now">Täglichen Report senden</string>
    <string name="toast_already_scheduled">Bereits geplant</string>
    <string name="toast_scheduled">Geplant</string>
    <string name="clear_reports">BERICHTE LEEREN</string>
    <string name="toast_reports_cleared">Berichte gelöscht</string>
    <string name="speak_title_desc">Titel sprechen</string>
    <string name="speak_text_desc">Text sprechen</string>
    <string name="speak_tts_desc">Text sprechen</string>
    <string name="speak_email_desc">E-Mail sprechen</string>
    <string name="stt_not_supported">Spracherkennung nicht verfügbar</string>
    <string name="preview_reminder">VORSCHAU</string>
    <string name="repeat_every_x_hours">Alle X Stunden wiederholen</string>
    <string name="every_hours">Alle %d Stunden</string>
    <string name="select_date">Datum wählen</string>
    <string name="select_interval">Intervall wählen</string>
    <string name="robot_description">Assistent Animation</string>
    <string name="dictation_timeout">Keine Sprache erkannt</string>
    <string name="dictation_error">Spracherkennung fehlgeschlagen</string>
</resources>